<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VolumeAssist</string>
    <string name="service_notification_title">VolumeAssist Active</string>
    <string name="service_notification_content">Tap to open settings</string>
    <string name="overlay_permission_required">Overlay permission is required for VolumeAssist to work</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="notification_permission_required">Notification permission is required</string>
    <string name="welcome_title">Welcome to VolumeAssist</string>
    <string name="welcome_message">Control volume and lock screen without physical buttons</string>
    <string name="setup_permissions">Setup Permissions</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="service_running">Service is running</string>
    <string name="service_stopped">Service is stopped</string>
    <string name="auto_start_enabled">Auto-start on boot enabled</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="flashlight">Flashlight</string>
    <string name="use_system_volume">Use System Volume Bar</string>
    <string name="volume_percentage">%1$d%%</string>
</resources>
